# CameraModel

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
inc/: pinhole.h  types.h
src/: pinhole.cpp
